// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PlaceholderWidget component should display the integration name if the widget is for an HTTP integration 1`] = `
<div>
  <div
    class="wrapper draggable"
  >
    <div
      class="wrapper"
      style="box-shadow: inset 3px 0 0 var(--httpMagenta);"
    >
      <div
        class="card"
      >
        <h5
          class="title"
        >
          Widget for my little integration http data
        </h5>
        <i
          class="delete material-icons text-danger"
        >
          delete
        </i>
      </div>
    </div>
  </div>
</div>
`;

exports[`PlaceholderWidget component should display the integration type if the widget is not for an HTTP integration 1`] = `
<div>
  <div
    class="wrapper draggable"
  >
    <div
      class="wrapper"
      style="box-shadow: inset 3px 0 0 var(--shopifyGreen);"
    >
      <div
        class="card"
      >
        <h5
          class="title"
        >
          Widget for Shopify data
        </h5>
        <i
          class="delete material-icons text-danger"
        >
          delete
        </i>
      </div>
    </div>
  </div>
</div>
`;
